--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-    	"phpunit/phpunit": "4.1.4"
+    	"phpunit/phpunit": "4.1.4",
+    	"laravel/framework": "4.2.*"
     }
 }
