--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_script:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script: 
-  phpunit tests/palindromo_test.php
-  phpunit --configuration myapp/protected/tests/phpunit.xml --coverage-text
+  - phpunit tests/palindromo_test.php
+  - phpunit --configuration myapp/protected/tests/phpunit.xml --coverage-text
 
 
 # configure notifications (email, IRC, campfire etc)
