--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ php:
 env:
   - example=example
 
+install:
+  - composer install --prefer-source --no-interaction
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - echo "Inicio"
