--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ env:
 
 install:
   - composer install --prefer-source --no-interaction
+
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - echo "Inicio"
+  - mkdir /home/travis/build/ricardovroma/teste_php/myapp/protected/runtime
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
