--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
 # use the $DB env variable to determine the phpunit.xml to use
 script: 
   - phpunit tests/palindromo_test.php
-  - phpunit --configuration myapp/protected/tests/phpunit.xml --coverage-text
+  - phpunit -c myapp/protected/tests/ myapp/protected/tests/unit
 
 
 # configure notifications (email, IRC, campfire etc)
